--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h2 id="contacts-title">Contacts</h2>
       <p>Email: <a href="mailto:mikhail.lysyi@gmail.com">mikhail.lysyi@gmail.com</a></p>
       <p>Telegram/WhatsApp: <a href="tel:+421950506167">+421 950 506 167</a></p>
-      <p>GitHub: <a href="https://github.com/your-username">https://github.com/your-username</a></p>
+      <p>GitHub: <a href="https://github.com/gianmishgun">https://github.com/gianmishgun</a></p>
     </section>
   </main>
   <footer>
