--- a/index.html
+++ b/index.html
@@ -21,70 +21,126 @@
       <h2 id="about-title">About Me</h2>
       <p id="about-text">Hi! I'm Mikhail, a multilingual professional with experience in education, tourism, and international projects.</p>
     </section>
-    <!-- Секция образования перенесена выше -->
     <section>
-      <h2 id="edu-title">Education</h2>
-      <ul id="edu-list">
-        <li><strong>Bachelor of Business Economics and Management</strong>, Matej Bel University (2023–2026)</li>
-        <li>Courses: Harvard (Justice), MIT (Macroeconomics, Cryptocurrencies), Lapland University (Business)</li>
-      </ul>
-      <p><a href="cv.pdf" download id="cv-link">📄 Download CV</a></p>
-    </section>
-    <section>
-        <h2 id="timeline-title">My Journey</h2>
-        <div id="timeline" class="timeline">
-            <div class="timeline-item" data-year="2016">
-                <div class="timeline-content">
-                    <h3>Beginning in Tourism</h3>
-                    <p>Became a safari guide in Finland, organizing tours and training new guides.</p>
-                </div>
+      <h2 id="timeline-title">My Journey</h2>
+      <div class="timeline-container">
+        <div id="education-timeline" class="timeline">
+          <h3>Education</h3>
+          <div class="timeline-item" data-year="2023">
+            <div class="timeline-content">
+              <h4>Bachelor of Business Economics and Management</h4>
+              <p><strong>Matej Bel University</strong>, Banská Bystrica, Slovakia</p>
+              <p>September 2023 – June 2026</p>
+              <p>Student Scientific Activity – 2024 – Case research of Misuse of AI International business competition by Visegrad Fund – 2025 – team leader of the winning team</p>
             </div>
-            <div class="timeline-item" data-year="2018">
-                <div class="timeline-content">
-                    <h3>Start in Teaching</h3>
-                    <p>Started a career as an English teacher, preparing students for international exams.</p>
-                </div>
+          </div>
+          <div class="timeline-item" data-year="2016">
+            <div class="timeline-content">
+              <h4>Bachelor of Business Administration in International Business</h4>
+              <p><strong>Lapland University of Applied Sciences</strong>, Rovaniemi, Finland</p>
+              <p>September 2016 – December 2020</p>
+              <p>Unfinished due to insufficient funds</p>
             </div>
-            <div class="timeline-item" data-year="2021">
-                <div class="timeline-content">
-                    <h3>Volunteering and Music</h3>
-                    <p>Combined helping people with creativity, working as a pianist in Turkey.</p>
-                </div>
-            </div>
-            <div class="timeline-item" data-year="2023">
-                <div class="timeline-content">
-                    <h3>New Stage in Education</h3>
-                    <p>Enrolled at Matej Bel University in Slovakia and became an Erasmus ESN organizer.</p>
-                </div>
-            </div>
+          </div>
         </div>
-    </section>
-    <section>
-      <h2 id="work-title">Work Experience</h2>
-      <ul id="work-list">
-        <li><strong>English Teacher</strong> (2018–present) — preparing students for SAT, IELTS, TOEFL</li>
-        <li><strong>Safari Guide</strong> (2016–2018, Finland) — tours and training new guides</li>
-        <li><strong>Technical Specialist, Uberfon</strong> (2017, Russia) — Apple device repairs</li>
-      </ul>
+        <div id="work-timeline" class="timeline">
+          <h3>Work Experience</h3>
+          <div class="timeline-item" data-year="2018">
+            <div class="timeline-content">
+              <h4>English Language Teacher | Self Employed</h4>
+              <p>September 2018 – present</p>
+              <p>Finding a methodology and creating an individual study program</p>
+              <p>Successfully taught 5 students from elementary to intermediate/conversational level</p>
+              <p>Preparation for SAT, IELTS, TOEFL</p>
+            </div>
+          </div>
+          <div class="timeline-item" data-year="2016">
+            <div class="timeline-content">
+              <h4>Safari Guide | Lapland Welcome LTD</h4>
+              <p>September 2016 – April 2018</p>
+              <p>Working in an international team and conducting common winter tourist activities such as snowmobile rides, ice fishing, countryside skiing, vehicle transfer, and others.</p>
+              <p>Training of junior guides to work as safari guides.</p>
+              <p>Sales tours, updating the database, communication with partners (hotels, restaurants, etc)</p>
+              <p>Positive feedback and zero accidents.</p>
+            </div>
+          </div>
+          <div class="timeline-item" data-year="2017">
+            <div class="timeline-content">
+              <h4>Junior Technical Specialist | Uberfon</h4>
+              <p>June 2017 – September 2017</p>
+              <p>Performing professional repairs on Apple devices in a short time with a team of specialists.</p>
+              <p>Quick learning of new Apple product features and reparation processes (watch, iPhone, iPod).</p>
+              <p>Reporting, dealing with the cash register, and communicating with suppliers and partners.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section>
       <h2 id="vol-title">Volunteering</h2>
       <ul id="vol-list">
-        <li>Erasmus ESN Organizer, Slovakia (2023–2026)</li>
-        <li>Swimming Teacher, Romania (2022–2023)</li>
-        <li>Community Projects, Georgia (2022)</li>
-        <li>Pianist, Turkey (2021)</li>
+        <li><strong>Erasmus Student Volunteer, organizer</strong> (October 2023 – June 2026) – Matej Bel University | ESN, Banská Bystrica, Slovakia</li>
+        <li><strong>Swimming teacher, tutor</strong> (October 2022 – April 2023) – CERT | European Solidarity Corps, Craiova, Romania</li>
+        <li><strong>Carpenter, gardener, handyman, shepherd</strong> (May 2022 – September 2022) – Georgia</li>
+        <li><strong>Pianist</strong> (20.12.2021) – Erciyes Culture Centre, Kayseri, Turkey</li>
+        <li><strong>Russian/English Language Teacher</strong> (September 2021 – December 2021) – Kayseri, Turkey</li>
+        <li><strong>Photographer</strong> (February 2017 – April 2018) – InnoBarentsLab, Rovaniemi, Finland</li>
       </ul>
     </section>
     <section>
       <h2 id="skills-title">Skills & Languages</h2>
-      <p id="skills-text"><strong>Languages:</strong> Russian (native), English (C1), Slovak (B1), German (A2), French (A1), Finnish (A1)</p>
+      <div class="skills-container">
+        <div class="skills-list">
+          <h3>Skills</h3>
+          <ul>
+            <li>Google, Microsoft Suite: Word, Excel, PowerPoint, Outlook</li>
+            <li>MS Windows, Linux, Apple</li>
+            <li>Driver Licence, category B</li>
+            <li>Coordinating and managing events</li>
+            <li>Work independently: individually and in teams</li>
+            <li>Adaptable, communicative, punctual, polite</li>
+          </ul>
+        </div>
+        <div class="languages-table">
+          <h3>Languages</h3>
+          <table>
+            <tr>
+              <th>Language</th>
+              <th>Level</th>
+            </tr>
+            <tr>
+              <td>Russian</td>
+              <td>Native</td>
+            </tr>
+            <tr>
+              <td>English</td>
+              <td>C1</td>
+            </tr>
+            <tr>
+              <td>Slovak</td>
+              <td>B1</td>
+            </tr>
+            <tr>
+              <td>German</td>
+              <td>A1-A2</td>
+            </tr>
+            <tr>
+              <td>French</td>
+              <td>A1-A2</td>
+            </tr>
+            <tr>
+              <td>Finnish</td>
+              <td>A1-A2</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
     <section>
       <h2 id="contacts-title">Contacts</h2>
       <p>Email: <a href="mailto:mikhail.lysyi@gmail.com">mikhail.lysyi@gmail.com</a></p>
       <p>Telegram/WhatsApp: <a href="tel:+421950506167">+421 950 506 167</a></p>
-      <p>GitHub: <a href="https://github.com/gianmishgun">https://github.com/gianmishgun</a></p>
+      <p>GitHub: <a href="https://github.com/your-username">https://github.com/your-username</a></p>
     </section>
   </main>
   <footer>
@@ -100,54 +156,75 @@
         document.getElementById("subtitle").innerText = "Преподаватель английского | Путешественник | Организатор";
         document.getElementById("about-title").innerText = "Обо мне";
         document.getElementById("about-text").innerText = "Привет! Я Михаил, многоязычный специалист с опытом работы в образовании, туризме и международных проектах.";
-
-        document.getElementById("edu-title").innerText = "Образование";
-        document.getElementById("edu-list").innerHTML = `
-          <li><strong>Бакалавр экономики и менеджмента</strong>, Matej Bel University (2023–2026)</li>
-          <li>Курсы: Harvard (Justice), MIT (Macroeconomics, Cryptocurrencies), Lapland University (Business)</li>`;
-        document.getElementById("cv-link").innerText = "📄 Скачать CV";
         document.getElementById("timeline-title").innerText = "Мой путь";
-        document.getElementById("timeline").innerHTML = `
-            <div class="timeline-item" data-year="2016">
-                <div class="timeline-content">
-                    <h3>Начало пути в туризме</h3>
-                    <p>Стал сафари-гидом в Финляндии, где организовывал туры и обучал новых гидов.</p>
-                </div>
-            </div>
-            <div class="timeline-item" data-year="2018">
-                <div class="timeline-content">
-                    <h3>Старт в преподавании</h3>
-                    <p>Начал карьеру преподавателя английского языка, готовя студентов к международным экзаменам.</p>
-                </div>
-            </div>
-            <div class="timeline-item" data-year="2021">
-                <div class="timeline-content">
-                    <h3>Волонтёрство и музыка</h3>
-                    <p>Совмещал помощь людям с творчеством, работая пианистом в Турции.</p>
-                </div>
-            </div>
-            <div class="timeline-item" data-year="2023">
-                <div class="timeline-content">
-                    <h3>Новый этап в образовании</h3>
-                    <p>Поступил в Matej Bel University в Словакии и стал организатором Erasmus ESN.</p>
-                </div>
-            </div>`;
-        document.getElementById("work-title").innerText = "Опыт работы";
-        document.getElementById("work-list").innerHTML = `
-          <li><strong>Преподаватель английского</strong> (2018–наст.вр.) — подготовка студентов к SAT, IELTS, TOEFL</li>
-          <li><strong>Сафари-гид</strong> (2016–2018, Финляндия) — организация туров, обучение новых гидов</li>
-          <li><strong>Тех. специалист Uberfon</strong> (2017, Россия) — ремонт устройств Apple</li>`;
-
         document.getElementById("vol-title").innerText = "Волонтёрство";
-        document.getElementById("vol-list").innerHTML = `
-          <li>Организатор Erasmus ESN, Словакия (2023–2026)</li>
-          <li>Преподаватель плавания, Румыния (2022–2023)</li>
-          <li>Социальные проекты, Грузия (2022)</li>
-          <li>Пианист, Турция (2021)</li>`;
         document.getElementById("skills-title").innerText = "Навыки и языки";
-        document.getElementById("skills-text").innerText = "<strong>Языки:</strong> Русский (родной), Английский (C1), Словацкий (B1), Немецкий (A2), Французский (A1), Финский (A1)";
         document.getElementById("contacts-title").innerText = "Контакты";
         document.querySelector("footer p").innerText = "© 2025 Михаил Лысый";
+
+        // Обновляем таймлайны
+        document.querySelector("#education-timeline h3").innerText = "Образование";
+        document.querySelector("#work-timeline h3").innerText = "Опыт работы";
+
+        // Обновляем список волонтерства
+        const volList = document.getElementById("vol-list");
+        volList.innerHTML = `
+          <li><strong>Волонтёр Erasmus, организатор</strong> (Октябрь 2023 – Июнь 2026) – Университет Матея Бела | ESN, Банска-Бистрица, Словакия</li>
+          <li><strong>Преподаватель плавания, наставник</strong> (Октябрь 2022 – Апрель 2023) – CERT | Европейский корпус солидарности, Крайова, Румыния</li>
+          <li><strong>Плотник, садовник, разнорабочий, пастух</strong> (Май 2022 – Сентябрь 2022) – Грузия</li>
+          <li><strong>Пианист</strong> (20.12.2021) – Культурный центр Эрджиес, Кайсери, Турция</li>
+          <li><strong>Преподаватель русского/английского языков</strong> (Сентябрь 2021 – Декабрь 2021) – Кайсери, Турция</li>
+          <li><strong>Фотограф</strong> (Февраль 2017 – Апрель 2018) – InnoBarentsLab, Рованиеми, Финляндия</li>
+        `;
+
+        // Обновляем таблицу языков
+        const tableHeaders = document.querySelectorAll(".languages-table table th");
+        tableHeaders[0].innerText = "Язык";
+        tableHeaders[1].innerText = "Уровень";
+
+        // Обновляем контент таблицы языков (если нужно)
+        const tableRows = document.querySelectorAll(".languages-table table tr");
+        tableRows.forEach((row, index) => {
+          if (index === 0) return; // Пропускаем заголовок
+          const cells = row.querySelectorAll("td");
+          if (cells.length >= 2) {
+            const language = cells[0].innerText.trim();
+            const level = cells[1].innerText.trim();
+            switch (language) {
+              case "Russian":
+                cells[0].innerText = "Русский";
+                cells[1].innerText = level === "Native" ? "Родной" : level;
+                break;
+              case "English":
+                cells[0].innerText = "Английский";
+                break;
+              case "Slovak":
+                cells[0].innerText = "Словацкий";
+                break;
+              case "German":
+                cells[0].innerText = "Немецкий";
+                break;
+              case "French":
+                cells[0].innerText = "Французский";
+                break;
+              case "Finnish":
+                cells[0].innerText = "Финский";
+                break;
+            }
+          }
+        });
+
+        // Обновляем список навыков
+        const skillsList = document.querySelector(".skills-list ul");
+        skillsList.innerHTML = `
+          <li>Google, Microsoft Suite: Word, Excel, PowerPoint, Outlook</li>
+          <li>MS Windows, Linux, Apple</li>
+          <li>Водительские права, категория B</li>
+          <li>Организация и управление мероприятиями</li>
+          <li>Работа независимо: индивидуально и в команде</li>
+          <li>Адаптивный, коммуникабельный, пунктуальный, вежливый</li>
+        `;
+
         lang = "ru";
       } else {
         // Возвращаемся на английский по умолчанию
