--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         .timeline-item::before {
             content: attr(data-year);
             position: absolute;
-            left: -100px; /* Adjusted for longer text */
+            left: -140px; /* Adjusted to prevent overlap */
             width: 80px;
             text-align: right;
             top: 20px;
@@ -167,9 +167,9 @@
                     <p><i data-lang-key="work2_loc"></i></p>
                     <ul data-lang-key="work2_desc"></ul>
                 </article>
-                 <article class="timeline-item" data-year="2017">
+                <article class="timeline-item" data-year="2017">
                     <h4 data-lang-key="work3_title"></h4>
-                     <p><i data-lang-key="work3_loc"></i></p>
+                    <p><i data-lang-key="work3_loc"></i></p>
                     <ul data-lang-key="work3_desc"></ul>
                 </article>
             </div>
@@ -192,12 +192,12 @@
                     <p data-lang-key="vol3_desc"></p>
                 </article>
                 <article class="timeline-item" data-year="2017-2018">
-                     <h4 data-lang-key="vol4_title"></h4>
+                    <h4 data-lang-key="vol4_title"></h4>
                     <p><i data-lang-key="vol4_loc"></i></p>
                     <p data-lang-key="vol4_desc"></p>
                 </article>
                 <article class="timeline-item" data-year="2021">
-                     <h4 data-lang-key="vol5_title"></h4>
+                    <h4 data-lang-key="vol5_title"></h4>
                     <p><i data-lang-key="vol5_loc"></i></p>
                     <p data-lang-key="vol5_desc"></p>
                 </article>
@@ -269,11 +269,11 @@
                     cv_title: "Curriculum Vitae", download_cv: "📄 Download CV",
                     education_title: "Education",
                     edu1_title: "Bachelor of Business Economics and Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej Bel University</a>', edu1_loc: "Banská Bystrica, Slovakia",
-                    edu1_desc: "<li>Student Scientific Activity - 2024 - Case research of Misuse of AI.</li><li>International business competition by Visegrad Fund - 2025 - team-leader of the winning team.</li>",
+                    edu1_desc: '<li>Student Scientific Activity - 2024 - Case research of Misuse of AI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Full text of the paper</a>)</li><li>International business competition by Visegrad Fund - 2025 - team-leader of the winning team.</li>',
                     edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Lapland University of Applied Sciences</a>', edu2_loc: "Rovaniemi, Finland",
                     edu2_desc: "Unfinished due to insufficient funds.",
                     add_courses_title: "Additional Courses",
-                    add_courses_list: '<li>University of Tokaj (summer university: cultural studies)</li><li>University of Lapland (business administration, economy)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (languages, history, social sciences)</li><li>Harvard College (via <a href="https://www.edx.org/" target="_blank">edX.org</a>: justice)</li><li>MIT (via <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: macroeconomics; cryptocurrencies)</li>',
+                    add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">University of Tokaj</a> (summer university: cultural studies)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">University of Lapland</a> (business administration, economy)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (languages, history, social sciences)</li><li>Harvard College (via <a href="https://www.edx.org/" target="_blank">edX.org</a>: justice)</li><li>MIT (via <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: macroeconomics; cryptocurrencies)</li>',
                     work_title: "Work Experience",
                     work1_title: "English Language Teacher | Self Employed",
                     work1_desc: "<li>Finding a methodology and creating an individual study program.</li><li>Successfully taught 5 students from elementary to intermediate/conversational level.</li><li>Preparation for SAT, IELTS, TOEFL.</li>",
@@ -282,7 +282,7 @@
                     work3_title: "Junior Technical Specialist | Uberfon", work3_loc: "Saint Petersburg, Russia",
                     work3_desc: "<li>Performing professional repairs on Apple devices in a team of specialists.</li><li>Quick learning of new Apple product features and reparation processes.</li><li>Reporting, cash register management, and communication with suppliers.</li>",
                     volunteer_title: "Volunteer Work",
-                    vol1_title: 'Erasmus Student Volunteer, Organizator | ESN', vol1_loc: 'Matej Bel University, Banská Bystrica',
+                    vol1_title: 'Erasmus Student Volunteer, Organizator | ESN', vol1_loc: '<a href="https://www.esn.sk/" target="_blank">Matej Bel University, Banská Bystrica</a>',
                     vol1_desc: "<li>Participating in budget decision-making.</li><li>Event management.</li><li>Monitoring of incoming student wellbeing.</li>",
                     vol2_title: 'Swimming teacher, tutor | CERT / <a href="https://youth.europa.eu/solidarity_en" target="_blank">European Solidarity Corps</a>', vol2_loc: "Craiova, Romania",
                     vol2_desc: "Organizing non-formal education classes, promoting healthy lifestyle and European values, teaching swimming to kids, and supporting cultural events.",
@@ -290,7 +290,7 @@
                     vol3_desc: "Creating wooden furniture in remote villages and caring for adults with disabilities.",
                     vol4_title: 'Photographer | <a href="https://www.lapinamk.fi/en/Cooperation/RDI-Projects/InnoBarentsLab" target="_blank">InnoBarentsLab</a>', vol4_loc: "Rovaniemi, Finland",
                     vol4_desc: "Creating media materials for seminars: Arctic Design Week, Northern Stars Seminar.",
-                    vol5_title: "Pianist | Erciyes Culture Centre", vol5_loc: "Kayseri, Turkey",
+                    vol5_title: "Pianist | Erciyes Culture Centre", vol5_loc: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Kayseri, Turkey</a>',
                     vol5_desc: 'Piano performance at the International Day of Disabled Persons: “Bir Gün Değil, Her Gün 3 Aralık”.',
                     skills_lang_title: "Skills & Languages", skills_subtitle: "Skills", lang_subtitle: "Languages",
                     lang_header_lang: "Language", lang_header_level: "Level", lang_ru: "Russian", level_native: "Native",
@@ -306,11 +306,11 @@
                     cv_title: "Резюме", download_cv: "📄 Скачать резюме",
                     education_title: "Образование",
                     edu1_title: "Бакалавр экономики и управления в бизнесе", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Университет Матея Бела</a>', edu1_loc: "Банска-Бистрица, Словакия",
-                    edu1_desc: "<li>Студенческая научная деятельность (2024) - Исследование злоупотреблений ИИ.</li><li>Международный бизнес-конкурс от Вышеградского фонда (2025) - капитан команды-победителя.</li>",
+                    edu1_desc: '<li>Студенческая научная деятельность (2024) - Исследование злоупотреблений ИИ. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Полный текст статьи</a>)</li><li>Международный бизнес-конкурс от Вышеградского фонда (2025) - капитан команды-победителя.</li>',
                     edu2_title: "Бакалавр делового администрирования в международном бизнесе", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Университет прикладных наук Лапландии</a>', edu2_loc: "Рованиеми, Финляндия",
                     edu2_desc: "Не окончено из-за недостатка средств.",
                     add_courses_title: "Дополнительные курсы",
-                    add_courses_list: '<li>Университет Токая (летняя школа: культурология)</li><li>Университет Лапландии (деловое администрирование, экономика)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (языки, история, обществознание)</li><li>Гарвардский колледж (через <a href="https://www.edx.org/" target="_blank">edX.org</a>: правосудие)</li><li>MIT (через <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: макроэкономика; криптовалюты)</li>',
+                    add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">Университет Токая</a> (летняя школа: культурология)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">Университет Лапландии</a> (деловое администрирование, экономика)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (языки, история, обществознание)</li><li>Гарвардский колледж (через <a href="https://www.edx.org/" target="_blank">edX.org</a>: правосудие)</li><li>MIT (через <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: макроэкономика; криптовалюты)</li>',
                     work_title: "Опыт работы",
                     work1_title: "Преподаватель английского языка | Частная практика",
                     work1_desc: "<li>Разработка методологии и создание индивидуальных программ обучения.</li><li>Успешно обучил 5 студентов с начального до разговорного уровня.</li><li>Подготовка к экзаменам SAT, IELTS, TOEFL.</li>",
@@ -319,7 +319,7 @@
                     work3_title: "Младший технический специалист | Uberfon", work3_loc: "Санкт-Петербург, Россия",
                     work3_desc: "<li>Профессиональный ремонт устройств Apple в команде специалистов.</li><li>Быстрое изучение новых продуктов и процессов ремонта Apple.</li><li>Ведение отчетности, работа с кассой и общение с поставщиками.</li>",
                     volunteer_title: "Волонтерская работа",
-                    vol1_title: 'Волонтер Erasmus, организатор | ESN', vol1_loc: 'Университет Матея Бела, Банска-Бистрица',
+                    vol1_title: 'Волонтер Erasmus, организатор | ESN', vol1_loc: '<a href="https://www.esn.sk/" target="_blank">Университет Матея Бела, Банска-Бистрица</a>',
                     vol1_desc: "<li>Участие в принятии бюджетных решений.</li><li>Организация мероприятий.</li><li>Мониторинг благополучия прибывающих студентов.</li>",
                     vol2_title: 'Учитель плавания, тьютор | CERT / <a href="https://youth.europa.eu/solidarity_en" target="_blank">Европейский корпус солидарности</a>', vol2_loc: "Крайова, Румыния",
                     vol2_desc: "Организация неформальных образовательных занятий, продвижение здорового образа жизни и европейских ценностей, обучение детей плаванию и поддержка культурных мероприятий.",
@@ -327,7 +327,7 @@
                     vol3_desc: "Создание деревянной мебели в отдаленных деревнях и уход за взрослыми с ограниченными возможностями.",
                     vol4_title: 'Фотограф | <a href="https://www.lapinamk.fi/en/Cooperation/RDI-Projects/InnoBarentsLab" target="_blank">InnoBarentsLab</a>', vol4_loc: "Рованиеми, Финляндия",
                     vol4_desc: "Создание медиаматериалов для семинаров: Arctic Design Week, Northern Stars Seminar.",
-                    vol5_title: "Пианист | Культурный центр Эрджиес", vol5_loc: "Кайсери, Турция",
+                    vol5_title: "Пианист | Культурный центр Эрджиес", vol5_loc: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Кайсери, Турция</a>',
                     vol5_desc: 'Выступление с фортепиано на Международном дне инвалидов: “Bir Gün Değil, Her Gün 3 Aralık”.',
                     skills_lang_title: "Навыки и языки", skills_subtitle: "Навыки", lang_subtitle: "Языки",
                     lang_header_lang: "Язык", lang_header_level: "Уровень", lang_ru: "Русский", level_native: "Родной",
@@ -336,18 +336,18 @@
                     interests_title: "Хобби и интересы",
                     interests_list: "<li>Путешествия и изучение разных культур</li><li>Игра на фортепиано</li><li>Фотография</li><li>Изучение новых языков</li><li>Работа по дереву и ремесла</li>",
                 },
-                 de: {
+                de: {
                     page_title: "Mikhail Lysyi | Persönliche Webseite", name: "Mikhail Lysyi", subtitle: "Englischlehrer | Reisender | Organisator",
                     tab_home: "Start", tab_cv: "Lebenslauf", tab_about: "Über mich",
                     home_title: "Kontaktinformationen", email_label: "Email:", social_label: "Soziale Medien:",
                     cv_title: "Lebenslauf", download_cv: "📄 Lebenslauf herunterladen",
                     education_title: "Bildung",
                     edu1_title: "Bachelor in Betriebswirtschaft und Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej-Bel-Universität</a>', edu1_loc: "Banská Bystrica, Slowakei",
-                    edu1_desc: "<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI.</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams.</li>",
+                    edu1_desc: '<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Volltext der Arbeit</a>)</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams.</li>',
                     edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Fachhochschule Lappland</a>', edu2_loc: "Rovaniemi, Finnland",
                     edu2_desc: "Nicht abgeschlossen aufgrund unzureichender Mittel.",
                     add_courses_title: "Zusätzliche Kurse",
-                    add_courses_list: '<li>Universität Tokaj (Sommeruniversität: Kulturwissenschaften)</li><li>Universität Lappland (Betriebswirtschaft, Volkswirtschaft)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (Sprachen, Geschichte, Sozialwissenschaften)</li><li>Harvard College (über <a href="https://www.edx.org/" target="_blank">edX.org</a>: Gerechtigkeit)</li><li>MIT (über <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: Makroökonomie; Kryptowährungen)</li>',
+                    add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">Universität Tokaj</a> (Sommeruniversität: Kulturwissenschaften)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">Universität Lappland</a> (Betriebswirtschaft, Volkswirtschaft)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (Sprachen, Geschichte, Sozialwissenschaften)</li><li>Harvard College (über <a href="https://www.edx.org/" target="_blank">edX.org</a>: Gerechtigkeit)</li><li>MIT (über <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: Makroökonomie; Kryptowährungen)</li>',
                     work_title: "Berufserfahrung",
                     work1_title: "Englischlehrer | Selbstständig",
                     work1_desc: "<li>Entwicklung einer Methodik und Erstellung individueller Lernprogramme.</li><li>Erfolgreich 5 Schüler vom Anfänger- bis zum Konversationsniveau unterrichtet.</li><li>Vorbereitung auf SAT, IELTS, TOEFL.</li>",
@@ -356,7 +356,7 @@
                     work3_title: "Junior Technischer Spezialist | Uberfon", work3_loc: "Sankt Petersburg, Russland",
                     work3_desc: "<li>Professionelle Reparaturen an Apple-Geräten im Team von Spezialisten.</li><li>Schnelles Erlernen neuer Apple-Produktfunktionen und Reparaturprozesse.</li><li>Berichterstattung, Kassenführung und Kommunikation mit Lieferanten.</li>",
                     volunteer_title: "Freiwilligenarbeit",
-                    vol1_title: 'Erasmus-Studentenfreiwilliger, Organisator | ESN', vol1_loc: 'Matej-Bel-Universität, Banská Bystrica',
+                    vol1_title: 'Erasmus-Studentenfreiwilliger, Organisator | ESN', vol1_loc: '<a href="https://www.esn.sk/" target="_blank">Matej-Bel-Universität, Banská Bystrica</a>',
                     vol1_desc: "<li>Teilnahme an Budgetentscheidungen.</li><li>Veranstaltungsmanagement.</li><li>Überwachung des Wohlbefindens ankommender Studenten.</li>",
                     vol2_title: 'Schwimmlehrer, Tutor | CERT / <a href="https://youth.europa.eu/solidarity_en" target="_blank">Europäisches Solidaritätskorps</a>', vol2_loc: "Craiova, Rumänien",
                     vol2_desc: "Organisation von nicht-formalen Bildungskursen, Förderung eines gesunden Lebensstils und europäischer Werte, Schwimmunterricht für Kinder und Unterstützung kultureller Veranstaltungen.",
@@ -364,7 +364,7 @@
                     vol3_desc: "Herstellung von Holzmöbeln in abgelegenen Dörfern und Betreuung von Erwachsenen mit Behinderungen.",
                     vol4_title: 'Fotograf | <a href="https://www.lapinamk.fi/en/Cooperation/RDI-Projects/InnoBarentsLab" target="_blank">InnoBarentsLab</a>', vol4_loc: "Rovaniemi, Finnland",
                     vol4_desc: "Erstellung von Medienmaterialien für Seminare: Arctic Design Week, Northern Stars Seminar.",
-                    vol5_title: "Pianist | Kulturzentrum Erciyes", vol5_loc: "Kayseri, Türkei",
+                    vol5_title: "Pianist | Kulturzentrum Erciyes", vol5_loc: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Kayseri, Türkei</a>',
                     vol5_desc: 'Klavieraufführung am Internationalen Tag der Menschen mit Behinderungen: “Bir Gün Değil, Her Gün 3 Aralık”.',
                     skills_lang_title: "Fähigkeiten & Sprachen", skills_subtitle: "Fähigkeiten", lang_subtitle: "Sprachen",
                     lang_header_lang: "Sprache", lang_header_level: "Niveau", lang_ru: "Russisch", level_native: "Muttersprache",
