--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         .timeline-item::before {
             content: attr(data-year);
             position: absolute;
-            left: -140px; /* Adjusted to prevent overlap */
+            left: -140px; 
             width: 80px;
             text-align: right;
             top: 20px;
@@ -269,7 +269,7 @@
                     cv_title: "Curriculum Vitae", download_cv: "📄 Download CV",
                     education_title: "Education",
                     edu1_title: "Bachelor of Business Economics and Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej Bel University</a>', edu1_loc: "Banská Bystrica, Slovakia",
-                    edu1_desc: '<li>Student Scientific Activity - 2024 - Case research of Misuse of AI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Full text of the paper</a>)</li><li>International business competition by Visegrad Fund - 2025 - team-leader of the winning team.</li>',
+                    edu1_desc: '<li>Student Scientific Activity - 2024 - Case research of Misuse of AI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Full text of the paper</a>)</li><li>International business competition by Visegrad Fund - 2025 - team-leader of the winning team. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Read more</a>)</li>',
                     edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Lapland University of Applied Sciences</a>', edu2_loc: "Rovaniemi, Finland",
                     edu2_desc: "Unfinished due to insufficient funds.",
                     add_courses_title: "Additional Courses",
@@ -278,7 +278,7 @@
                     work1_title: "English Language Teacher | Self Employed",
                     work1_desc: "<li>Finding a methodology and creating an individual study program.</li><li>Successfully taught 5 students from elementary to intermediate/conversational level.</li><li>Preparation for SAT, IELTS, TOEFL.</li>",
                     work2_title: "Safari & Travel Guide", work2_loc: "Rovaniemi, Finland",
-                    work2_desc: '<li>Companies: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, Wander Lapland LTD, Helios Tour LTD.</li><li>Working in an international team and conducting winter tourist activities (snowmobile rides, ice fishing, etc.).</li><li>Training of junior guides.</li><li>Sales, database management, and partner communication.</li><li>Received positive feedback with zero accidents.</li>',
+                    work2_desc: '<li>Companies: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Working in an international team and conducting winter tourist activities (snowmobile rides, ice fishing, etc.).</li><li>Training of junior guides.</li><li>Sales, database management, and partner communication.</li><li>Received positive feedback with zero accidents.</li>',
                     work3_title: "Junior Technical Specialist | Uberfon", work3_loc: "Saint Petersburg, Russia",
                     work3_desc: "<li>Performing professional repairs on Apple devices in a team of specialists.</li><li>Quick learning of new Apple product features and reparation processes.</li><li>Reporting, cash register management, and communication with suppliers.</li>",
                     volunteer_title: "Volunteer Work",
@@ -306,7 +306,7 @@
                     cv_title: "Резюме", download_cv: "📄 Скачать резюме",
                     education_title: "Образование",
                     edu1_title: "Бакалавр экономики и управления в бизнесе", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Университет Матея Бела</a>', edu1_loc: "Банска-Бистрица, Словакия",
-                    edu1_desc: '<li>Студенческая научная деятельность (2024) - Исследование злоупотреблений ИИ. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Полный текст статьи</a>)</li><li>Международный бизнес-конкурс от Вышеградского фонда (2025) - капитан команды-победителя.</li>',
+                    edu1_desc: '<li>Студенческая научная деятельность (2024) - Исследование злоупотреблений ИИ. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Полный текст статьи</a>)</li><li>Международный бизнес-конкурс от Вышеградского фонда (2025) - капитан команды-победителя. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Читать далее</a>)</li>',
                     edu2_title: "Бакалавр делового администрирования в международном бизнесе", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Университет прикладных наук Лапландии</a>', edu2_loc: "Рованиеми, Финляндия",
                     edu2_desc: "Не окончено из-за недостатка средств.",
                     add_courses_title: "Дополнительные курсы",
@@ -315,7 +315,7 @@
                     work1_title: "Преподаватель английского языка | Частная практика",
                     work1_desc: "<li>Разработка методологии и создание индивидуальных программ обучения.</li><li>Успешно обучил 5 студентов с начального до разговорного уровня.</li><li>Подготовка к экзаменам SAT, IELTS, TOEFL.</li>",
                     work2_title: "Сафари и туристический гид", work2_loc: "Рованиеми, Финляндия",
-                    work2_desc: '<li>Компании: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, Wander Lapland LTD, Helios Tour LTD.</li><li>Работа в международной команде, проведение зимних туристических мероприятий (поездки на снегоходах, подледная рыбалка и т.д.).</li><li>Обучение младших гидов.</li><li>Продажи, управление базами данных и коммуникация с партнерами.</li><li>Получил положительные отзывы, ноль несчастных случаев.</li>',
+                    work2_desc: '<li>Компании: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Работа в международной команде, проведение зимних туристических мероприятий (поездки на снегоходах, подледная рыбалка и т.д.).</li><li>Обучение младших гидов.</li><li>Продажи, управление базами данных и коммуникация с партнерами.</li><li>Получил положительные отзывы, ноль несчастных случаев.</li>',
                     work3_title: "Младший технический специалист | Uberfon", work3_loc: "Санкт-Петербург, Россия",
                     work3_desc: "<li>Профессиональный ремонт устройств Apple в команде специалистов.</li><li>Быстрое изучение новых продуктов и процессов ремонта Apple.</li><li>Ведение отчетности, работа с кассой и общение с поставщиками.</li>",
                     volunteer_title: "Волонтерская работа",
@@ -343,7 +343,7 @@
                     cv_title: "Lebenslauf", download_cv: "📄 Lebenslauf herunterladen",
                     education_title: "Bildung",
                     edu1_title: "Bachelor in Betriebswirtschaft und Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej-Bel-Universität</a>', edu1_loc: "Banská Bystrica, Slowakei",
-                    edu1_desc: '<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Volltext der Arbeit</a>)</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams.</li>',
+                    edu1_desc: '<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Volltext der Arbeit</a>)</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Mehr lesen</a>)</li>',
                     edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Fachhochschule Lappland</a>', edu2_loc: "Rovaniemi, Finnland",
                     edu2_desc: "Nicht abgeschlossen aufgrund unzureichender Mittel.",
                     add_courses_title: "Zusätzliche Kurse",
@@ -352,7 +352,7 @@
                     work1_title: "Englischlehrer | Selbstständig",
                     work1_desc: "<li>Entwicklung einer Methodik und Erstellung individueller Lernprogramme.</li><li>Erfolgreich 5 Schüler vom Anfänger- bis zum Konversationsniveau unterrichtet.</li><li>Vorbereitung auf SAT, IELTS, TOEFL.</li>",
                     work2_title: "Safari- & Reiseleiter", work2_loc: "Rovaniemi, Finnland",
-                    work2_desc: '<li>Unternehmen: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, Wander Lapland LTD, Helios Tour LTD.</li><li>Arbeit in einem internationalen Team und Durchführung von Wintertourismusaktivitäten (Schneemobilfahrten, Eisfischen usw.).</li><li>Ausbildung von Junior-Guides.</li><li>Verkauf, Datenbankverwaltung und Partnerkommunikation.</li><li>Erhielt positives Feedback ohne Unfälle.</li>',
+                    work2_desc: '<li>Unternehmen: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Arbeit in einem internationalen Team und Durchführung von Wintertourismusaktivitäten (Schneemobilfahrten, Eisfischen usw.).</li><li>Ausbildung von Junior-Guides.</li><li>Verkauf, Datenbankverwaltung und Partnerkommunikation.</li><li>Erhielt positives Feedback ohne Unfälle.</li>',
                     work3_title: "Junior Technischer Spezialist | Uberfon", work3_loc: "Sankt Petersburg, Russland",
                     work3_desc: "<li>Professionelle Reparaturen an Apple-Geräten im Team von Spezialisten.</li><li>Schnelles Erlernen neuer Apple-Produktfunktionen und Reparaturprozesse.</li><li>Berichterstattung, Kassenführung und Kommunikation mit Lieferanten.</li>",
                     volunteer_title: "Freiwilligenarbeit",
